--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tinymce/tinymce-react": "^6.2.1",
+    "@tiptap/extension-color": "^3.0.7",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.7",
+    "@tiptap/extension-text-style": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "@types/axios": "^0.9.36",
     "apexcharts": "^4.5.0",
     "axios": "^1.10.0",
